--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT=8080
 DB_URL=mongodb://127.0.0.1:27017/studynotion
 
+FRONTEND_LINK=
 
 MAIL_HOST=smtp.gmail.com
 MAIL_USER=mailitttome@gmail.com
